Simplify Native Image Configuration and Add Native Tests (#546)
Simplifies native configuration removing the need for the `-addons-graal` module and cleanup metadata. Also adds native tests.

---------

Co-authored-by: Graeme Rocher <graeme.rocher@oracle.com>