@@ -1,5 +1,6 @@
 plugins {
     id 'io.micronaut.build.internal.oraclecloud-example'
+    id 'io.micronaut.build.internal.oraclecloud-native-tests'
     id 'io.micronaut.application'
 }
 
@@ -25,7 +26,7 @@ test {
 
 mainClassName = 'example.Application'
 
-graalvmNative.binaries.configureEach {
-    buildArgs.add '--initialize-at-build-time=example'
-    jvmArgs("--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED")
+
+micronaut {
+    enableNativeImage false
 }
